.metadata/.plugins/org.eclipse.cdt.ui/my_Critical.build.log
21:07:50 **** Incremental Build of configuration Debug for project my_Critical ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/freertos.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/freertos.d" -MT"Core/Src/freertos.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/freertos.o"
../Core/Src/freertos.c: In function 'TxTask':
../Core/Src/freertos.c:137:39: error: 'huart2' undeclared (first use in this function)
  137 |                 HAL_UART_Receive_DMA(&huart2,TxData,sizeof(TxData));
      |                                       ^~~~~~
../Core/Src/freertos.c:137:39: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/freertos.c: In function 'RxTask':
../Core/Src/freertos.c:146:17: warning: implicit declaration of function 'xQueueReiceive'; did you mean 'xQueueReceive'? [-Wimplicit-function-declaration]
  146 |                 xQueueReiceive(xQueue,RxData,portMAX_DELAY);
      |                 ^~~~~~~~~~~~~~
      |                 xQueueReceive
../Core/Src/freertos.c:148:25: error: 'uxStatus' undeclared (first use in this function); did you mean 'uxStates'?
  148 |                         uxStatus = taskENTER_CRITICAL();
      |                         ^~~~~~~~
      |                         uxStates
../Core/Src/freertos.c:149:47: error: 'huart2' undeclared (first use in this function)
  149 |                         HAL_UART_Receive_DMA(&huart2,TxData,sizeof(TxData));
      |                                               ^~~~~~
../Core/Src/freertos.c:149:54: error: 'TxData' undeclared (first use in this function); did you mean 'RxData'?
  149 |                         HAL_UART_Receive_DMA(&huart2,TxData,sizeof(TxData));
      |                                                      ^~~~~~
      |                                                      RxData
../Core/Src/freertos.c:150:51: error: macro "taskEXIT_CRITICAL" passed 1 arguments, but takes just 0
  150 |                         taskEXIT_CRITICAL(uxStatus);
      |                                                   ^
In file included from ../Core/Src/freertos.c:22:
../Middlewares/Third_Party/FreeRTOS/Source/include/task.h:202: note: macro "taskEXIT_CRITICAL" defined here
  202 | #define taskEXIT_CRITICAL()                     portEXIT_CRITICAL()
      | 
../Core/Src/freertos.c:150:25: error: 'taskEXIT_CRITICAL' undeclared (first use in this function)
  150 |                         taskEXIT_CRITICAL(uxStatus);
      |                         ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:49: Core/Src/freertos.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

21:07:50 Build Failed. 7 errors, 1 warnings. (took 506ms)

